# video-gen

./: README.md  pyproject.toml
video_gen/: __init__.py  video_material.py
video_gen/common/: tools.py
video_gen/core/configs/: config.py
video_gen/core/tools/: openai_client.py  volcengine_client.py
video_gen/harrypotter/: .gitignore  README.md  audio_extractor.py  models.py  packager.py  scene_detector.py  synthesizer.py  transcript_corrector.py  transcript_translator.py  transformer.py
