[project]
name = "video-gen"
version = "0.1.0"
description = "Harry Potter audiobook to video pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",

    # ASR and audio processing - version locked for compatibility
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "whisperx==3.3.1",
    "pyannote-audio==3.3.2",
    "transformers==4.44.0",

    # Subtitle parsing
    "pysubs2>=1.8.0",

    # S3 storage
    "s3fs>=2025.9.0",

    # HTTP requests
    "requests>=2.28.0",

    # OpenAI API client
    "openai>=1.0.0",

    # Template rendering
    "jinja2>=3.1.0",

    # Plotting (required by pyannote.audio)
    "matplotlib>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["video_gen"]
